Colaboratory を使用して作成しました

--- a/Attention_branch_network_Github.ipynb
+++ b/Attention_branch_network_Github.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled47.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +40,7 @@
       "metadata": {
         "id": "-FK0-DdivLFm",
         "colab_type": "code",
-        "outputId": "17c8a620-8cbc-4642-ba7c-c07b14908d9e",
+        "outputId": "dae7aa47-c35d-48f8-c5fd-05afcda9d8a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -57,7 +56,7 @@
         "!date -R\n",
         "!ls\n"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,8 +66,8 @@
             "Enter your authorization code:\n",
             "··········\n",
             "Mounted at /content/drive\n",
-            "Mon, 13 Apr 2020 06:10:28 +0000\n",
-            "Mon, 13 Apr 2020 06:10:32 +0000\n",
+            "Mon, 13 Apr 2020 08:49:14 +0000\n",
+            "Mon, 13 Apr 2020 08:49:22 +0000\n",
             "attention_branch_network-master  drive\tsample_data\n"
           ],
           "name": "stdout"
@@ -80,7 +79,7 @@
       "metadata": {
         "id": "WpTizePnxmit",
         "colab_type": "code",
-        "outputId": "3435bad3-01b4-4ca9-af34-f4b558d33fc5",
+        "outputId": "9b2a88e4-a4e4-4492-df67-226664eb60ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -91,7 +90,7 @@
         "os.chdir('/content/attention_branch_network-master')\n",
         "!ls"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,17 +107,17 @@
       "metadata": {
         "id": "cL1jZH6AI9QL",
         "colab_type": "code",
+        "outputId": "c4438ea3-e00a-46be-cef5-0ba7a5d98f67",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 862
-        },
-        "outputId": "43b1c8d0-3b37-4fd3-f737-276d03865a2d"
+          "height": 867
+        }
       },
       "source": [
         "#HELPを参照\n",
         "!python3 imagenet.py -h"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,16 +180,16 @@
       "metadata": {
         "id": "Qm-j3mlhx57G",
         "colab_type": "code",
-        "outputId": "6034caec-115a-4908-f6f4-d3a46deac954",
+        "outputId": "9ede9682-b4e0-468e-9be6-f937dcd85cb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 320
         }
       },
       "source": [
-        "!python3 imagenet.py -d \"/content/drive/My Drive/Deep_learning/applstra\""
+        "!python3 imagenet.py -d \"/content/drive/My Drive/Deep_learning/applstra/\" -a resnet18 -e"
       ],
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,8 +201,15 @@
             "=> creating model 'resnet18'\n",
             "    Total params: 21.61M\n",
             "\n",
-            "Epoch: [1 | 90] LR: 0.100000\n",
-            "\u001b[?25l\n"
+            "Evaluation only\n",
+            "Traceback (most recent call last):\n",
+            "  File \"imagenet.py\", line 399, in <module>\n",
+            "    main()\n",
+            "  File \"imagenet.py\", line 193, in main\n",
+            "    test_loss, test_acc = test(val_loader, model, criterion, start_epoch, use_cuda)\n",
+            "  File \"imagenet.py\", line 296, in test\n",
+            "    fc = open('categorie.txt', 'r')\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: 'categorie.txt'\n"
           ],
           "name": "stdout"
         }
@@ -212,29 +218,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XtjU6_K24oXk",
+        "id": "a6nrbbd0w5Ro",
         "colab_type": "code",
-        "outputId": "fab613c3-6cab-4dc6-ce4c-5b6745207ad9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
-        }
+          "height": 34
+        },
+        "outputId": "7cb9669d-3e23-4ab3-bc10-6e09c96034cd"
       },
       "source": [
-        "use_cuda"
+        "os.path.join(\"/content/drive/My Drive/Deep_learning/applstra/\", 'train')"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-a43e9c2ef442>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0muse_cuda\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'use_cuda' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/drive/My Drive/Deep_learning/applstra/train'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
         }
       ]
     }
