Colaboratory を使用して作成しました

--- a/Attention_branch_network_Gravcont_全画像.ipynb
+++ b/Attention_branch_network_Gravcont_全画像.ipynb
@@ -32,6 +32,7 @@
       },
       "source": [
         "#PyTorch : RESNETを用いたattention residual network\n",
+        "Imagenetからの転移学習を利用\n",
         "\n",
         "https://github.com/machine-perception-robotics-group/attention_branch_network/blob/master/models/imagenet/resnet.py\n",
         "\n",
