Colaboratory を使用して作成しました

--- a/5-1-2_DCGAN.ipynb
+++ b/5-1-2_DCGAN.ipynb
@@ -53,11 +53,11 @@
       "metadata": {
         "id": "4aJF_cNmexDI",
         "colab_type": "code",
+        "outputId": "5525cc33-a390-4974-c573-ce4c65e15106",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        },
-        "outputId": "75cd4734-f1d2-4e88-c520-17435db1b6b3"
+        }
       },
       "source": [
         "import os\n",
@@ -86,8 +86,8 @@
             "remote: Enumerating objects: 4, done.\u001b[K\n",
             "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 445 (delta 0), reused 1 (delta 0), pack-reused 441\n",
-            "Receiving objects: 100% (445/445), 14.63 MiB | 14.69 MiB/s, done.\n",
+            "remote: Total 445 (delta 0), reused 1 (delta 0), pack-reused 441\u001b[K\n",
+            "Receiving objects: 100% (445/445), 14.63 MiB | 6.79 MiB/s, done.\n",
             "Resolving deltas: 100% (231/231), done.\n"
           ],
           "name": "stdout"
@@ -109,11 +109,11 @@
       "metadata": {
         "id": "soLEAJMK4FJL",
         "colab_type": "code",
+        "outputId": "6d55df1f-7a71-4701-a65d-2eda4640de57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d6356699-e0e2-4fdd-f89c-fa98c737976f"
+        }
       },
       "source": [
         "import os\n",
@@ -158,11 +158,11 @@
       "metadata": {
         "id": "VXPxNs3S4FOK",
         "colab_type": "code",
+        "outputId": "782a8a27-ab8c-45df-9fa1-20dbd02f12d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "44288201-5023-4df0-b2a3-9d2973ef0c3c"
+        }
       },
       "source": [
         "# データの取り出し\n",
@@ -293,7 +293,7 @@
         "\n",
         "        self.layer1 = nn.Sequential(\n",
         "            nn.ConvTranspose2d(z_dim, image_size * 8,\n",
-        "                               kernel_size=4, stride=1),\n",
+        "                               kernel_size=4, stride=1, padding=0),\n",
         "            nn.BatchNorm2d(image_size * 8),\n",
         "            nn.ReLU(inplace=True))\n",
         "\n",
@@ -320,6 +320,8 @@
         "                               stride=2, padding=1),\n",
         "            nn.Tanh())\n",
         "        # 注意：白黒画像なので出力チャネルは1つだけ\n",
+        "        # nn.ConvTranspose2d(in_channel, out_channel, kernel_size,\n",
+        "                               stride, padding)\n",
         "\n",
         "    def forward(self, z):\n",
         "        out = self.layer1(z)\n",
@@ -338,11 +340,11 @@
       "metadata": {
         "id": "oQ3rq8UK4FQk",
         "colab_type": "code",
+        "outputId": "35b6d21a-6a2c-4d71-d080-d6a26a6efe3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 268
-        },
-        "outputId": "81786077-6a35-41e1-845c-d23bdf8f8437"
+        }
       },
       "source": [
         "# 動作確認\n",
@@ -444,11 +446,11 @@
       "metadata": {
         "id": "SBW3IxBh4FZJ",
         "colab_type": "code",
+        "outputId": "94881de1-5a14-457a-a0f1-4909a74835d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "94881de1-5a14-457a-a0f1-4909a74835d1"
+        }
       },
       "source": [
         "# 動作確認\n",
@@ -465,7 +467,7 @@
         "# 出力d_outにSigmoidをかけて0から1に変換\n",
         "print(nn.Sigmoid()(d_out))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,11 +493,11 @@
       "metadata": {
         "id": "ogvP3Ze57XYD",
         "colab_type": "code",
+        "outputId": "09dc8d5c-e0fb-42c9-f793-4015dafaa66f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
-        },
-        "outputId": "09dc8d5c-e0fb-42c9-f793-4015dafaa66f"
+        }
       },
       "source": [
         "# Dの誤差関数のイメージ実装\n",
@@ -530,7 +532,7 @@
         "d_loss_fake = criterion(d_out_fake.view(-1), label_fake)\n",
         "d_loss = d_loss_real + d_loss_fake"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -668,11 +670,11 @@
       "metadata": {
         "id": "7QeOKMLT7Xkr",
         "colab_type": "code",
+        "outputId": "53dec7e6-68d4-4470-8309-01f66d907c4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "53dec7e6-68d4-4470-8309-01f66d907c4b"
+        }
       },
       "source": [
         "# DataLoaderの作成と動作確認\n",
@@ -697,7 +699,7 @@
         "imges = next(batch_iterator)  # 1番目の要素を取り出す\n",
         "print(imges.size())  # torch.Size([64, 1, 64, 64])"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,11 +725,11 @@
       "metadata": {
         "id": "h8HmmT0s7XnK",
         "colab_type": "code",
+        "outputId": "0df52a90-c394-4d89-c5f0-ccd2304301f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0df52a90-c394-4d89-c5f0-ccd2304301f3"
+        }
       },
       "source": [
         "\n",
@@ -750,7 +752,7 @@
         "\n",
         "print(\"ネットワークの初期化完了\")"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,11 +907,11 @@
       "metadata": {
         "id": "wMndtm5r7XsV",
         "colab_type": "code",
+        "outputId": "ef0d4227-0c89-44dc-92fa-d1bd87e43350",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "ef0d4227-0c89-44dc-92fa-d1bd87e43350"
+        }
       },
       "source": [
         "# 学習・検証を実行する\n",
@@ -918,7 +920,7 @@
         "G_update, D_update = train_model(\n",
         "    G, D, dataloader=train_dataloader, num_epochs=num_epochs)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4434,11 +4436,11 @@
       "metadata": {
         "id": "YvrKj-Et7Xur",
         "colab_type": "code",
+        "outputId": "e523d68a-a880-4f9e-a1e8-bc59dcdcf506",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
-        },
-        "outputId": "e523d68a-a880-4f9e-a1e8-bc59dcdcf506"
+        }
       },
       "source": [
         "# 生成画像と訓練データを可視化する\n",
@@ -4471,7 +4473,7 @@
         "    plt.subplot(2, 5, 5+i+1)\n",
         "    plt.imshow(fake_images[i][0].cpu().detach().numpy(), 'gray')"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
