Colaboratory を使用して作成しました

--- a/ResNet50_VGGFace2.ipynb
+++ b/ResNet50_VGGFace2.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "Untitled50.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfp3hufcVgCO5i2louuPdk",
+      "authorship_tag": "ABX9TyOK1ls0vzVtuR/kitNQ+bwj",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#**GravCont: ResNet_VGGFace2**"
+        "#**GravCont: ResNet50_VGGFace2**"
       ]
     },
     {
@@ -39,11 +40,11 @@
       "metadata": {
         "id": "T9t50CyCD8Wp",
         "colab_type": "code",
+        "outputId": "3c1bb0b2-1368-459d-acad-9e55adfc9fbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "3c1bb0b2-1368-459d-acad-9e55adfc9fbc"
+        }
       },
       "source": [
         "# License: BSD\n",
@@ -97,7 +98,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
