Colaboratory を使用して作成しました

--- a/Untitled67.ipynb
+++ b/Untitled67.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled67.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXvzSENXExIxpNcIO0uEW8",
+      "authorship_tag": "ABX9TyNzTJG2+uc54/uP9Hjr/g0F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,42 +133,45 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 408
+          "height": 425
         },
-        "outputId": "b78ba839-fc6f-47ba-86b4-776761da62f2"
+        "outputId": "651dcf61-47ef-46ac-af91-84ef6a975917"
       },
       "source": [
-        "df = pd.read_csv(path[0][0])\n",
-        "print(df)"
+        "df = pd.read_csv(path[0][0], index_col=0)\n",
+        "print(df)\n",
+        "\n",
+        "print(df.iloc[0,1])"
       ],
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "   Unnamed: 0               Unnamed: 0.1          0          1          2  \\\n",
-            "0           0                         TP  39.000000  48.000000  47.000000   \n",
-            "1           1                         TN  50.000000  46.000000  47.000000   \n",
-            "2           2                         FP   4.000000   8.000000   7.000000   \n",
-            "3           3                         FN  15.000000   6.000000   7.000000   \n",
-            "4           4                   Accuracy   0.824074   0.870370   0.870370   \n",
-            "5           5  Positive predictive value   0.906977   0.857143   0.870370   \n",
-            "6           6                  sensitity   0.722222   0.888889   0.870370   \n",
-            "7           7                specificity   0.925926   0.851852   0.870370   \n",
-            "8           8                    F-value   0.804124   0.872727   0.870370   \n",
-            "9           9                    roc_auc   0.922840   0.945130   0.926269   \n",
+            "                Unnamed: 0.1          0          1          2          3  \\\n",
+            "0                         TP  39.000000  48.000000  47.000000  44.000000   \n",
+            "1                         TN  50.000000  46.000000  47.000000  50.000000   \n",
+            "2                         FP   4.000000   8.000000   7.000000   4.000000   \n",
+            "3                         FN  15.000000   6.000000   7.000000  10.000000   \n",
+            "4                   Accuracy   0.824074   0.870370   0.870370   0.870370   \n",
+            "5  Positive predictive value   0.906977   0.857143   0.870370   0.916667   \n",
+            "6                  sensitity   0.722222   0.888889   0.870370   0.814815   \n",
+            "7                specificity   0.925926   0.851852   0.870370   0.925926   \n",
+            "8                    F-value   0.804124   0.872727   0.870370   0.862745   \n",
+            "9                    roc_auc   0.922840   0.945130   0.926269   0.921982   \n",
             "\n",
-            "           3          4        avg       std  \n",
-            "0  44.000000  45.000000  44.600000  3.507136  \n",
-            "1  50.000000  50.000000  48.600000  1.949359  \n",
-            "2   4.000000   4.000000   5.400000  1.949359  \n",
-            "3  10.000000   9.000000   9.400000  3.507136  \n",
-            "4   0.870370   0.879630   0.861559  0.022106  \n",
-            "5   0.916667   0.918367   0.890891  0.028252  \n",
-            "6   0.814815   0.833333   0.824122  0.064947  \n",
-            "7   0.925926   0.925926   0.899015  0.036099  \n",
-            "8   0.862745   0.873786   0.856207  0.029734  \n",
-            "9   0.921982   0.911523   0.925549  0.012255  \n"
+            "           4        avg       std  \n",
+            "0  45.000000  44.600000  3.507136  \n",
+            "1  50.000000  48.600000  1.949359  \n",
+            "2   4.000000   5.400000  1.949359  \n",
+            "3   9.000000   9.400000  3.507136  \n",
+            "4   0.879630   0.861559  0.022106  \n",
+            "5   0.918367   0.890891  0.028252  \n",
+            "6   0.833333   0.824122  0.064947  \n",
+            "7   0.925926   0.899015  0.036099  \n",
+            "8   0.873786   0.856207  0.029734  \n",
+            "9   0.911523   0.925549  0.012255  \n",
+            "39.0\n"
           ],
           "name": "stdout"
         }
