--- a/RandomForest_and_XGBoost.ipynb
+++ b/RandomForest_and_XGBoost.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled68.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ/zTrVIxLRM0qKsyKuhyF",
+      "authorship_tag": "ABX9TyP3un68lYbalrVCxarw3X63",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -397,6 +397,13 @@
         "\n",
         "df = pd.read_csv(\"http://lib.stat.cmu.edu/datasets/boston_corrected.txt\",skiprows=9,sep=\"\\t\")\n",
         "print(df.columns)\n",
+        "\n",
+        "# 訓練データとテストデータに分割する。\n",
+        "# 本当は町ごとにサンプリングした方がいいと思うが、TODOにしておく。\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "# TODO:層別サンプリング train, test = train_test_split(df, test_size=0.20, stratify=df[\"町区分\"], random_state=100)\n",
+        "train, test = train_test_split(df, test_size=0.20,random_state=100)\n",
+        "\n",
         "\n",
         "FEATURE_COLS=[\n",
         " #'OBS.',\n",
