Colaboratory を使用して作成しました

--- a/RandomForest_and_XGBoost.ipynb
+++ b/RandomForest_and_XGBoost.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled68.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3un68lYbalrVCxarw3X63",
+      "authorship_tag": "ABX9TyPPN8FL/+hPWZEV51Rr921l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -696,6 +696,37 @@
         "outputId": "e01e6600-ea08-4274-fe48-ae4f9d401ef2"
       },
       "source": [
+        "# 自由度調整済みr2を算出\n",
+        "def adjusted_r2(X,Y,model):\n",
+        "    from sklearn.metrics import r2_score\n",
+        "    import numpy as np\n",
+        "    r_squared = r2_score(Y, model.predict(X))\n",
+        "    adjusted_r2 = 1 - (1-r_squared)*(len(Y)-1)/(len(Y)-X.shape[1]-1)\n",
+        "    #yhat = model.predict(X) \\ #SS_Residual = sum((Y-yhat)**2) \\ #SS_Total = sum((Y-np.mean(Y))**2)\n",
+        "    #r_squared = 1 - (float(SS_Residual))/ SS_Total\n",
+        "    return adjusted_r2\n",
+        "\n",
+        "# 予測モデルの精度確認の各種指標を算出\n",
+        "def get_model_evaluations(X_train,Y_train,X_test,Y_test,model):\n",
+        "    from sklearn.metrics import explained_variance_score\n",
+        "    from sklearn.metrics import mean_absolute_error\n",
+        "    from sklearn.metrics import mean_squared_error\n",
+        "    from sklearn.metrics import mean_squared_log_error\n",
+        "    from sklearn.metrics import median_absolute_error\n",
+        "\n",
+        "   # 評価指標確認\n",
+        "   # 参考: https://funatsu-lab.github.io/open-course-ware/basic-theory/accuracy-index/\n",
+        "    yhat_test = model.predict(X_test)\n",
+        "    return \"adjusted_r2(train)     :\" + str(adjusted_r2(X_train,Y_train,model)) \\\n",
+        "         , \"adjusted_r2(test)      :\" + str(adjusted_r2(X_test,Y_test,model)) \\\n",
+        "         , \"平均誤差率(test)       :\" + str(np.mean(abs(Y_test / yhat_test - 1))) \\\n",
+        "         , \"MAE(test)              :\" + str(mean_absolute_error(Y_test, yhat_test)) \\\n",
+        "         , \"MedianAE(test)         :\" + str(median_absolute_error(Y_test, yhat_test)) \\\n",
+        "         , \"RMSE(test)             :\" + str(np.sqrt(mean_squared_error(Y_test, yhat_test))) \\\n",
+        "         , \"RMSE(test) / MAE(test) :\" + str(np.sqrt(mean_squared_error(Y_test, yhat_test)) / mean_absolute_error(Y_test, yhat_test)) #better if result = 1.253\n",
+        "\n",
+        "\n",
+        "\n",
         "# Grid Searchで一番精度が良かったモデル\n",
         "bestmodel = grid.best_estimator_\n",
         "\n",
