Colaboratory を使用して作成しました

--- a/Open_Interpreter_Demo.ipynb
+++ b/Open_Interpreter_Demo.ipynb
@@ -51,13 +51,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "4pDQ5xE-lokf"
       },
       "outputs": [],
       "source": [
-        "!pip install open-interpreter\n",
+        "!pip install open-interpreter --q\n",
         "# Google Colab users: restart your runtime here."
       ]
     },
@@ -107,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNc1ijbrsV6m",
-        "outputId": "a8fa5a93-52b2-4281-940d-a075d7f4b72b"
+        "outputId": "7327aacc-5844-413d-d9e6-322b876f2819"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "id": "SCEh9l8LZqcL"
       },
@@ -153,7 +153,35 @@
       "metadata": {
         "id": "CrI5b2IAFeDk"
       },
-      "execution_count": 9,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Open-Interpreter playgrounds"
+      ],
+      "metadata": {
+        "id": "4YmO9MCpxyLB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message = \"\"\"\n",
+        "\n",
+        "Pubmed\n",
+        "https://pubmed.ncbi.nlm.nih.gov/\n",
+        "で、\"IgG4-ROD\"で検索したときの上位10件のタイトルを教えて\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "interpreter.chat(f\"{message}\")"
+      ],
+      "metadata": {
+        "id": "c9lwIw7Ox1ra"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +270,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 178
         },
         "id": "ZpwadxmIoiIR",
         "outputId": "0351a780-ca5d-4f8b-d925-2f6699f65594"
